Bug 121640 - konsole crush and causes sig 11 when clicking/right clicking anywhere inside after deleting all saved sessions, including predefined sessions
Summary: konsole crush and causes sig 11 when clicking/right clicking anywhere inside ...
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-02-09 11:34 UTC by Crocodilu
Modified: 2006-05-12 17:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Crocodilu 2006-02-09 11:34:58 UTC
Version:            (using KDE KDE 3.5.1)
Installed from:    Fedora RPMs
OS:                Linux

After trying to save some sessions, I deleted all the predefined sessions from konsole. Now when I try to open the menu, or right click in the panel, konsole crashes with sig 11.
Even when i click on the new session button, it crash.  ANY click or right click crashes the konsole. Nothing else was done tot the sistem, it worked perfectly, only after deleting predefined session, the bug appeared.

Backtrace shows this:

(no debugging symbols found)
Using host libthread_db library "/lib/libthread_db.so.1".
(no debugging symbols found)
`shared object read from target memory' has disappeared; keeping its symbols.
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread -1208935520 (LWP 4123)]
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[KCrash handler]
#6  0x004770a4 in KConfigBase::readEntry () from /usr/lib/libkdecore.so.4
#7  0x00d00a50 in Konsole::createSessionMenus ()
   from /usr/lib/libkdeinit_konsole.so
#8  0x00d08e80 in Konsole::buildSessionMenus ()
   from /usr/lib/libkdeinit_konsole.so
#9  0x00d0b807 in Konsole::makeGUI () from /usr/lib/libkdeinit_konsole.so
#10 0x00d16577 in Konsole::qt_invoke () from /usr/lib/libkdeinit_konsole.so
#11 0x03dd9e17 in QObject::activate_signal ()
   from /usr/lib/qt-3.3/lib/libqt-mt.so.3
#12 0x03dda374 in QObject::activate_signal ()
   from /usr/lib/qt-3.3/lib/libqt-mt.so.3
#13 0x04169064 in QPopupMenu::aboutToShow ()
   from /usr/lib/qt-3.3/lib/libqt-mt.so.3
#14 0x03ef15c5 in QPopupMenu::popup () from /usr/lib/qt-3.3/lib/libqt-mt.so.3
#15 0x03ee5f22 in QMenuBar::openActPopup ()
   from /usr/lib/qt-3.3/lib/libqt-mt.so.3
#16 0x03ee6dff in QMenuBar::setActiveItem ()
   from /usr/lib/qt-3.3/lib/libqt-mt.so.3
#17 0x03ee796b in QMenuBar::mousePressEvent ()
   from /usr/lib/qt-3.3/lib/libqt-mt.so.3
#18 0x03e181aa in QWidget::event () from /usr/lib/qt-3.3/lib/libqt-mt.so.3
#19 0x03d750dd in QApplication::internalNotify ()
   from /usr/lib/qt-3.3/lib/libqt-mt.so.3
#20 0x03d7603f in QApplication::notify ()
   from /usr/lib/qt-3.3/lib/libqt-mt.so.3
#21 0x00454841 in KApplication::notify () from /usr/lib/libkdecore.so.4
#22 0x03d0c746 in QETWidget::translateMouseEvent ()
   from /usr/lib/qt-3.3/lib/libqt-mt.so.3
#23 0x03d0af01 in QApplication::x11ProcessEvent ()
   from /usr/lib/qt-3.3/lib/libqt-mt.so.3
#24 0x03d1f008 in QEventLoop::processEvents ()
   from /usr/lib/qt-3.3/lib/libqt-mt.so.3
#25 0x03d8d82b in QEventLoop::enterLoop ()
   from /usr/lib/qt-3.3/lib/libqt-mt.so.3
#26 0x03d8d736 in QEventLoop::exec () from /usr/lib/qt-3.3/lib/libqt-mt.so.3
#27 0x03d74aa9 in QApplication::exec () from /usr/lib/qt-3.3/lib/libqt-mt.so.3
#28 0x00cf5de8 in kdemain () from /usr/lib/libkdeinit_konsole.so
#29 0x00282d5f in __libc_start_main () from /lib/libc.so.6
#30 0x080483e1 in ?? ()
Comment 1 Kurt Hindenburg 2006-05-12 17:53:03 UTC
SVN commit 540103 by hindenburg:

Fix crash when user deletes all the sessions.

BUG: 121640


 M  +8 -0      konsole.cpp  


--- branches/KDE/3.5/kdebase/konsole/konsole/konsole.cpp #540102:540103
@@ -3413,6 +3413,14 @@
 
 void Konsole::createSessionMenus()
 {
+  if (no2command.isEmpty()) { // All sessions have been deleted
+    m_session->insertItem(SmallIconSet("window_new"),
+                          i18n("New &Window"), SESSION_NEW_WINDOW_ID);
+    m_tabbarSessionsCommands->insertItem(SmallIconSet("window_new"),
+                          i18n("New &Window"), SESSION_NEW_WINDOW_ID);
+    return;
+  }
+
   KSimpleConfig *cfg = no2command[SESSION_NEW_SHELL_ID];
   QString txt = cfg->readEntry("Name");
   QString icon = cfg->readEntry("Icon", "konsole");