Fix crash when user deletes all the sessions.

BUG: 121640

svn path=/branches/KDE/3.5/kdebase/konsole/; revision=540103